syntax = "proto3";
package joelbits;

option java_package = "joelbits.model.ast.protobuf";
option java_outer_classname = "ASTProtos";

message ASTRoot {
    repeated string imports = 1;
    repeated Namespace namespaces = 2;
}

message Declaration {
    string name = 1;
    DeclarationType type = 2;
    repeated Declaration nested_declarations = 3;
    repeated Modifier modifiers = 4;
    repeated Variable fields = 5;
    repeated Method methods = 6;
    repeated Type parents = 7;
}

message Expression {
    ExpressionType type = 1;
    string literal = 2;
    string method = 3;
    string variable = 4;
    repeated Expression method_arguments = 5;
    repeated Variable variable_declarations = 6;
    Modifier annotation = 7;
    bool is_postfix = 8;
    Type new_type = 9;
    enum ExpressionType {
        LITERAL = 0;
        NEW = 1;
        ASSIGN = 2;
        OTHER = 3;
        TYPECOMPARE = 4;
        VARIABLE_DECLARATION = 5;
        METHODCALL = 6;
        CAST = 7;
        CONDITIONAL = 8;
        RETURN_VALUE = 9;
        FIELD_ACCESS = 10;
    }
}

message Statement {
    StatementType type = 1;
    repeated Expression expressions = 2;
    Expression condition = 3;
    repeated Expression initializations = 4;
    repeated Statement statements = 5;
    repeated Expression updates = 6;
    enum StatementType {
        FOR = 0;
        DO = 1;
        IF = 2;
        RETURN = 3;
        WHILE = 4;
        TRY = 5;
        OTHER = 6;
    }
}

message Method {
    string name = 1;
    repeated Variable arguments = 2;
    Type return_type = 3;
    repeated Modifier modifiers = 4;
    repeated Type exception_types = 5;
    repeated Expression body_content = 6;
    repeated Statement statements = 7;
}

message Modifier {
    string name = 1;
    ModifierType type = 2;
    repeated string members_and_values = 3;
    VisibilityType visibility = 4;
    string other = 5;
    enum ModifierType {
        ABSTRACT = 0;
        ANNOTATION = 1;
        FINAL = 2;
        STATIC = 3;
        SYNCHRONIZED = 4;
        VISIBILITY = 5;
        OTHER = 6;
    }
    enum VisibilityType {
        NAMESPACE = 0;
        PUBLIC = 1;
        PROTECTED = 2;
        PRIVATE = 3;
    }
}

message Namespace {
    string name = 1;
    repeated Declaration declarations = 2;
    repeated Modifier modifiers = 3;
}

message Variable {
    string name = 1;
    Type type = 2;
    Expression initializer = 3;
    repeated Modifier modifiers = 4;
}

message Type {
    string name = 1;
    DeclarationType type = 2;
}

enum DeclarationType {
    CLASS = 0;
    ANONYMOUS = 1;
    ANNOTATION = 2;
    INTERFACE = 3;
    GENERIC = 4;
    ENUM = 5;
    OTHER = 6;
}